--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </section>
   
     <section id="buttonSection">
+        <h3>Click one of the buttons below</h3>
         <button id="lifeInYearsBtn" class="yearsBtn BtnInactive button">years</button>
         <button id="lifeInMonthsBtn" class="monthsBtn BtnInactive button">months</button>
         <button id="lifeInWeeksBtn" class="weeksBtn BtnInactive button">weeks</button>
