--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section id="formSection">
         <form id="lifeForm">
-            <label for="lifeExpectation">Enter your life expectation:</label>
+            <label for="lifeExpectation">Enter your life expectancy:</label>
             <input id="lifeExpectation" placeholder="enter your life expectation"><br><br>
             <label for="currentAge">Enter your current age:</label>
             <input id="currentAge" placeholder="enter your current age"><br><br>
