--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <section id="formSection">
         <form id="lifeForm">
-            <label for="lifeExpectation">Enter your life expectancy:</label>
-            <input id="lifeExpectation" placeholder="enter your life expectation"><br><br>
-            <label for="currentAge">Enter your current age:</label>
-            <input id="currentAge" placeholder="enter your current age"><br><br>
+            <label for="lifeExpectancy">Enter your life expectancy:</label>
+            <input id="lifeExpectancy" placeholder="enter your life expectancy"><br><br>
+            <label for="birthdate">Enter your birthdate:</label>
+            <input id="birthdate" type="date" placeholder="enter your birthdate"><br><br>
             <input type="submit">
         </form>
     </section>
   
     <section id="buttonSection">
-        <h3>Click one of the buttons below</h3>
+        <p>Click one of the buttons below</p>
         <button id="lifeInYearsBtn" class="yearsBtn BtnInactive button">years</button>
         <button id="lifeInMonthsBtn" class="monthsBtn BtnInactive button">months</button>
         <button id="lifeInWeeksBtn" class="weeksBtn BtnInactive button">weeks</button>
